config/objects/Quote_Item__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>LINEHAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Primary_Units__c</fullName>
        <label>Free Primary Units</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Units__c</fullName>
        <label>Free Units</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Units__c</fullName>
        <label>Max Units</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Charge__c</fullName>
        <label>Maximum Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Condition_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Measure Condition Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Measure_Condition_Max__c</fullName>
        <label>Measure Condition Max</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_Condition_Min__c</fullName>
        <label>Measure Condition Min</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_Condition_Note__c</fullName>
        <label>Measure Condition Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_Condition__c</fullName>
        <label>Measure Condition</label>
        <picklist>
            <picklistValues>
                <fullName>DETENTION MINUTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALLET SPOTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POUNDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFTGATE STOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEIGHT PER PALLET SPOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTS PER FUEL GALLON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLATION HOURS NOTICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERMODAL ALLOWED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSOLIDATION ALLOWED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEAM SERVICE REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFRIGERATION REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUMPER CHARGES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <picklist>
            <picklistValues>
                <fullName>LOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINEHAUL CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINEHAUL AND FUEL CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALLET SPOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUMPER CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETENTION MINUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFTGATE STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAYOVER DAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECONSIGNMENT STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDELIVERY ATTEMPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENT PER FUEL GALLON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REMAINING CAPACITY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Charge__c</fullName>
        <label>Minimum Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Measure__c</fullName>
        <label>Second Measure</label>
        <picklist>
            <picklistValues>
                <fullName>MILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINEHAUL CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINEHAUL AND FUEL CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALLET SPOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUMPER CHARGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETENTION MINUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFTGATE STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAYOVER DAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECONSIGNMENT STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDELIVERY ATTEMPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENT PER FUEL GALLON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Units__c</fullName>
        <label>Second Units</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>LINEHAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESSORIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOTAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rate Item</label>
    <nameField>
        <displayFormat>QI-{000000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Measure_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>or(isblank(text(Measure__c)),isnull(text(Measure__c)))</errorConditionFormula>
        <errorMessage>A measure is required for each quote item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Rate__c = null</errorConditionFormula>
        <errorMessage>Quote items rates cannot be null.</errorMessage>
    </validationRules>
</CustomObject>